--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.4.1
 decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.2
+django-cors-headers==4.6.0
 django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
